更新hdfs配置文件，将hadoop版本降低至1.0+